Okay Djangolang in good shape now, at least for data loading- let's see how many weeks it takes me to do the arduous aspects of packing / deployment
