# pkg/api/camera.go
@@ -296,11 +296,7 @@ func (m *Camera) FromItem(item map[string]any) error {
 	return nil
 }
 
-func (m *Camera) Reload(
-	ctx context.Context,
-	tx *sqlx.Tx,
-	includeDeleteds ...bool,
-) error {
+func (m *Camera) Reload(ctx context.Context, tx *sqlx.Tx, includeDeleteds ...bool) error {
 	extraWhere := ""
 	if len(includeDeleteds) > 0 && includeDeleteds[0] {
 		if slices.Contains(CameraTableColumns, "deleted_at") {
@@ -334,13 +330,7 @@ func (m *Camera) Reload(
 	return nil
 }
 
-func (m *Camera) Insert(
-	ctx context.Context,
-	tx *sqlx.Tx,
-	setPrimaryKey bool,
-	setZeroValues bool,
-	forceSetValuesForFields ...string,
-) error {
+func (m *Camera) Insert(ctx context.Context, tx *sqlx.Tx, setPrimaryKey bool, setZeroValues bool, forceSetValuesForFields ...string) error {
 	columns := make([]string, 0)
 	values := make([]any, 0)
 
@@ -467,18 +457,13 @@ func (m *Camera) Insert(
 
 	err = m.Reload(ctx, tx, slices.Contains(forceSetValuesForFields, "deleted_at"))
 	if err != nil {
-		return fmt.Errorf("failed to reload after insert")
+		return fmt.Errorf("failed to reload after insert: %v", err)
 	}
 
 	return nil
 }
 
-func (m *Camera) Update(
-	ctx context.Context,
-	tx *sqlx.Tx,
-	setZeroValues bool,
-	forceSetValuesForFields ...string,
-) error {
+func (m *Camera) Update(ctx context.Context, tx *sqlx.Tx, setZeroValues bool, forceSetValuesForFields ...string) error {
 	columns := make([]string, 0)
 	values := make([]any, 0)
 
@@ -579,11 +564,7 @@ func (m *Camera) Update(
 	return nil
 }
 
-func (m *Camera) Delete(
-	ctx context.Context,
-	tx *sqlx.Tx,
-	hardDeletes ...bool,
-) error {
+func (m *Camera) Delete(ctx context.Context, tx *sqlx.Tx, hardDeletes ...bool) error {
 	hardDelete := false
 	if len(hardDeletes) > 0 {
 		hardDelete = hardDeletes[0]
@@ -624,15 +605,7 @@ func (m *Camera) Delete(
 	return nil
 }
 
-func SelectCameras(
-	ctx context.Context,
-	tx *sqlx.Tx,
-	where string,
-	orderBy *string,
-	limit *int,
-	offset *int,
-	values ...any,
-) ([]*Camera, error) {
+func SelectCameras(ctx context.Context, tx *sqlx.Tx, where string, orderBy *string, limit *int, offset *int, values ...any) ([]*Camera, error) {
 	if slices.Contains(CameraTableColumns, "deleted_at") {
 		if !strings.Contains(where, "deleted_at") {
 			if where != "" {
@@ -671,21 +644,20 @@ func SelectCameras(
 			return nil, err
 		}
 
-		thatCtx, ok := query.HandleQueryPathGraphCycles(ctx, fmt.Sprintf("%s{%v}", CameraTable, object.ID))
-		if !ok {
-			continue
-		}
+		thatCtx := ctx
 
-		thatCtx, ok = query.HandleQueryPathGraphCycles(thatCtx, fmt.Sprintf("ReferencedBy%s{%v}", CameraTable, object.ID))
-		if !ok {
+		thatCtx, ok1 := query.HandleQueryPathGraphCycles(ctx, fmt.Sprintf("%s{%v}", CameraTable, object.ID))
+		thatCtx, ok2 := query.HandleQueryPathGraphCycles(thatCtx, fmt.Sprintf("__ReferencedBy__%s{%v}", CameraTable, object.ID))
+		if !(ok1 && ok2) {
 			continue
 		}
 
 		_ = thatCtx
 
 		err = func() error {
-			thisCtx, ok1 := query.HandleQueryPathGraphCycles(thatCtx, fmt.Sprintf("%s{%v}", CameraTable, object.ID))
-			thisCtx, ok2 := query.HandleQueryPathGraphCycles(thatCtx, fmt.Sprintf("ReferencedBy%s{%v}", CameraTable, object.ID))
+			thisCtx := thatCtx
+			thisCtx, ok1 := query.HandleQueryPathGraphCycles(thisCtx, fmt.Sprintf("%s{%v}", CameraTable, object.ID))
+			thisCtx, ok2 := query.HandleQueryPathGraphCycles(thisCtx, fmt.Sprintf("__ReferencedBy__%s{%v}", CameraTable, object.ID))
 
 			if ok1 && ok2 {
 				object.ReferencedByDetectionCameraIDObjects, err = SelectDetections(
@@ -711,8 +683,9 @@ func SelectCameras(
 		}
 
 		err = func() error {
-			thisCtx, ok1 := query.HandleQueryPathGraphCycles(thatCtx, fmt.Sprintf("%s{%v}", CameraTable, object.ID))
-			thisCtx, ok2 := query.HandleQueryPathGraphCycles(thatCtx, fmt.Sprintf("ReferencedBy%s{%v}", CameraTable, object.ID))
+			thisCtx := thatCtx
+			thisCtx, ok1 := query.HandleQueryPathGraphCycles(thisCtx, fmt.Sprintf("%s{%v}", CameraTable, object.ID))
+			thisCtx, ok2 := query.HandleQueryPathGraphCycles(thisCtx, fmt.Sprintf("__ReferencedBy__%s{%v}", CameraTable, object.ID))
 
 			if ok1 && ok2 {
 				object.ReferencedByVideoCameraIDObjects, err = SelectVideos(
@@ -743,12 +716,7 @@ func SelectCameras(
 	return objects, nil
 }
 
-func SelectCamera(
-	ctx context.Context,
-	tx *sqlx.Tx,
-	where string,
-	values ...any,
-) (*Camera, error) {
+func SelectCamera(ctx context.Context, tx *sqlx.Tx, where string, values ...any) (*Camera, error) {
 	ctx, cleanup := query.WithQueryID(ctx)
 	defer cleanup()
 
@@ -796,7 +764,7 @@ func handleGetCameras(w http.ResponseWriter, r *http.Request, db *sqlx.DB, redis
 	values := make([]any, 0)
 	wheres := make([]string, 0)
 	for rawKey, rawValues := range r.URL.Query() {
-		if rawKey == "limit" || rawKey == "offset" || rawKey == "shallow" {
+		if rawKey == "limit" || rawKey == "offset" || rawKey == "depth" {
 			continue
 		}
 
@@ -1012,9 +980,22 @@ func handleGetCameras(w http.ResponseWriter, r *http.Request, db *sqlx.DB, redis
 		offset = int(possibleOffset)
 	}
 
-	_, shallow := r.URL.Query()["shallow"]
-	if shallow {
-		ctx = context.WithValue(ctx, query.ShallowKey, true)
+	depth := 1
+	rawDepth := r.URL.Query().Get("depth")
+	if rawDepth != "" {
+		possibleDepth, err := strconv.ParseInt(rawDepth, 10, 64)
+		if err != nil {
+			helpers.HandleErrorResponse(
+				w,
+				http.StatusInternalServerError,
+				fmt.Errorf("failed to parse param depth=%s as int: %v", rawDepth, err),
+			)
+			return
+		}
+
+		depth = int(possibleDepth)
+
+		ctx = query.WithMaxDepth(ctx, &depth)
 	}
 
 	hashableOrderBy := ""
@@ -1028,7 +1009,7 @@ func handleGetCameras(w http.ResponseWriter, r *http.Request, db *sqlx.DB, redis
 		orderBy = &hashableOrderBy
 	}
 
-	requestHash, err := helpers.GetRequestHash(CameraTable, wheres, hashableOrderBy, limit, offset, shallow, values, nil)
+	requestHash, err := helpers.GetRequestHash(CameraTable, wheres, hashableOrderBy, limit, offset, depth, values, nil)
 	if err != nil {
 		helpers.HandleErrorResponse(w, http.StatusInternalServerError, err)
 		return
@@ -1087,12 +1068,57 @@ func handleGetCamera(w http.ResponseWriter, r *http.Request, db *sqlx.DB, redisP
 	wheres := []string{fmt.Sprintf("%s = $$??", CameraTablePrimaryKeyColumn)}
 	values := []any{primaryKey}
 
-	_, shallow := r.URL.Query()["shallow"]
-	if shallow {
-		ctx = context.WithValue(ctx, query.ShallowKey, true)
+	unrecognizedParams := make([]string, 0)
+	hadUnrecognizedParams := false
+
+	for rawKey, rawValues := range r.URL.Query() {
+		if rawKey == "depth" {
+			continue
+		}
+
+		isUnrecognized := true
+
+		for _, rawValue := range rawValues {
+			if isUnrecognized {
+				unrecognizedParams = append(unrecognizedParams, fmt.Sprintf("%s=%s", rawKey, rawValue))
+				hadUnrecognizedParams = true
+				continue
+			}
+
+			if hadUnrecognizedParams {
+				continue
+			}
+		}
 	}
 
-	requestHash, err := helpers.GetRequestHash(CameraTable, wheres, "", 2, 0, shallow, values, primaryKey)
+	if hadUnrecognizedParams {
+		helpers.HandleErrorResponse(
+			w,
+			http.StatusInternalServerError,
+			fmt.Errorf("unrecognized params %s", strings.Join(unrecognizedParams, ", ")),
+		)
+		return
+	}
+
+	depth := 1
+	rawDepth := r.URL.Query().Get("depth")
+	if rawDepth != "" {
+		possibleDepth, err := strconv.ParseInt(rawDepth, 10, 64)
+		if err != nil {
+			helpers.HandleErrorResponse(
+				w,
+				http.StatusInternalServerError,
+				fmt.Errorf("failed to parse param depth=%s as int: %v", rawDepth, err),
+			)
+			return
+		}
+
+		depth = int(possibleDepth)
+
+		ctx = query.WithMaxDepth(ctx, &depth)
+	}
+
+	requestHash, err := helpers.GetRequestHash(CameraTable, wheres, "", 2, 0, depth, values, primaryKey)
 	if err != nil {
 		helpers.HandleErrorResponse(w, http.StatusInternalServerError, err)
 		return
@@ -1150,9 +1176,54 @@ func handlePostCameras(w http.ResponseWriter, r *http.Request, db *sqlx.DB, redi
 
 	ctx := r.Context()
 
-	_, shallow := r.URL.Query()["shallow"]
-	if shallow {
-		ctx = context.WithValue(ctx, query.ShallowKey, true)
+	unrecognizedParams := make([]string, 0)
+	hadUnrecognizedParams := false
+
+	for rawKey, rawValues := range r.URL.Query() {
+		if rawKey == "depth" {
+			continue
+		}
+
+		isUnrecognized := true
+
+		for _, rawValue := range rawValues {
+			if isUnrecognized {
+				unrecognizedParams = append(unrecognizedParams, fmt.Sprintf("%s=%s", rawKey, rawValue))
+				hadUnrecognizedParams = true
+				continue
+			}
+
+			if hadUnrecognizedParams {
+				continue
+			}
+		}
+	}
+
+	if hadUnrecognizedParams {
+		helpers.HandleErrorResponse(
+			w,
+			http.StatusInternalServerError,
+			fmt.Errorf("unrecognized params %s", strings.Join(unrecognizedParams, ", ")),
+		)
+		return
+	}
+
+	depth := 1
+	rawDepth := r.URL.Query().Get("depth")
+	if rawDepth != "" {
+		possibleDepth, err := strconv.ParseInt(rawDepth, 10, 64)
+		if err != nil {
+			helpers.HandleErrorResponse(
+				w,
+				http.StatusInternalServerError,
+				fmt.Errorf("failed to parse param depth=%s as int: %v", rawDepth, err),
+			)
+			return
+		}
+
+		depth = int(possibleDepth)
+
+		ctx = query.WithMaxDepth(ctx, &depth)
 	}
 
 	b, err := io.ReadAll(r.Body)
@@ -1263,9 +1334,54 @@ func handlePutCamera(w http.ResponseWriter, r *http.Request, db *sqlx.DB, redisP
 
 	ctx := r.Context()
 
-	_, shallow := r.URL.Query()["shallow"]
-	if shallow {
-		ctx = context.WithValue(ctx, query.ShallowKey, true)
+	unrecognizedParams := make([]string, 0)
+	hadUnrecognizedParams := false
+
+	for rawKey, rawValues := range r.URL.Query() {
+		if rawKey == "depth" {
+			continue
+		}
+
+		isUnrecognized := true
+
+		for _, rawValue := range rawValues {
+			if isUnrecognized {
+				unrecognizedParams = append(unrecognizedParams, fmt.Sprintf("%s=%s", rawKey, rawValue))
+				hadUnrecognizedParams = true
+				continue
+			}
+
+			if hadUnrecognizedParams {
+				continue
+			}
+		}
+	}
+
+	if hadUnrecognizedParams {
+		helpers.HandleErrorResponse(
+			w,
+			http.StatusInternalServerError,
+			fmt.Errorf("unrecognized params %s", strings.Join(unrecognizedParams, ", ")),
+		)
+		return
+	}
+
+	depth := 1
+	rawDepth := r.URL.Query().Get("depth")
+	if rawDepth != "" {
+		possibleDepth, err := strconv.ParseInt(rawDepth, 10, 64)
+		if err != nil {
+			helpers.HandleErrorResponse(
+				w,
+				http.StatusInternalServerError,
+				fmt.Errorf("failed to parse param depth=%s as int: %v", rawDepth, err),
+			)
+			return
+		}
+
+		depth = int(possibleDepth)
+
+		ctx = query.WithMaxDepth(ctx, &depth)
 	}
 
 	b, err := io.ReadAll(r.Body)
@@ -1358,9 +1474,54 @@ func handlePatchCamera(w http.ResponseWriter, r *http.Request, db *sqlx.DB, redi
 
 	ctx := r.Context()
 
-	_, shallow := r.URL.Query()["shallow"]
-	if shallow {
-		ctx = context.WithValue(ctx, query.ShallowKey, true)
+	unrecognizedParams := make([]string, 0)
+	hadUnrecognizedParams := false
+
+	for rawKey, rawValues := range r.URL.Query() {
+		if rawKey == "depth" {
+			continue
+		}
+
+		isUnrecognized := true
+
+		for _, rawValue := range rawValues {
+			if isUnrecognized {
+				unrecognizedParams = append(unrecognizedParams, fmt.Sprintf("%s=%s", rawKey, rawValue))
+				hadUnrecognizedParams = true
+				continue
+			}
+
+			if hadUnrecognizedParams {
+				continue
+			}
+		}
+	}
+
+	if hadUnrecognizedParams {
+		helpers.HandleErrorResponse(
+			w,
+			http.StatusInternalServerError,
+			fmt.Errorf("unrecognized params %s", strings.Join(unrecognizedParams, ", ")),
+		)
+		return
+	}
+
+	depth := 1
+	rawDepth := r.URL.Query().Get("depth")
+	if rawDepth != "" {
+		possibleDepth, err := strconv.ParseInt(rawDepth, 10, 64)
+		if err != nil {
+			helpers.HandleErrorResponse(
+				w,
+				http.StatusInternalServerError,
+				fmt.Errorf("failed to parse param depth=%s as int: %v", rawDepth, err),
+			)
+			return
+		}
+
+		depth = int(possibleDepth)
+
+		ctx = query.WithMaxDepth(ctx, &depth)
 	}
 
 	b, err := io.ReadAll(r.Body)
@@ -1462,9 +1623,54 @@ func handleDeleteCamera(w http.ResponseWriter, r *http.Request, db *sqlx.DB, red
 
 	ctx := r.Context()
 
-	_, shallow := r.URL.Query()["shallow"]
-	if shallow {
-		ctx = context.WithValue(ctx, query.ShallowKey, true)
+	unrecognizedParams := make([]string, 0)
+	hadUnrecognizedParams := false
+
+	for rawKey, rawValues := range r.URL.Query() {
+		if rawKey == "depth" {
+			continue
+		}
+
+		isUnrecognized := true
+
+		for _, rawValue := range rawValues {
+			if isUnrecognized {
+				unrecognizedParams = append(unrecognizedParams, fmt.Sprintf("%s=%s", rawKey, rawValue))
+				hadUnrecognizedParams = true
+				continue
+			}
+
+			if hadUnrecognizedParams {
+				continue
+			}
+		}
+	}
+
+	if hadUnrecognizedParams {
+		helpers.HandleErrorResponse(
+			w,
+			http.StatusInternalServerError,
+			fmt.Errorf("unrecognized params %s", strings.Join(unrecognizedParams, ", ")),
+		)
+		return
+	}
+
+	depth := 1
+	rawDepth := r.URL.Query().Get("depth")
+	if rawDepth != "" {
+		possibleDepth, err := strconv.ParseInt(rawDepth, 10, 64)
+		if err != nil {
+			helpers.HandleErrorResponse(
+				w,
+				http.StatusInternalServerError,
+				fmt.Errorf("failed to parse param depth=%s as int: %v", rawDepth, err),
+			)
+			return
+		}
+
+		depth = int(possibleDepth)
+
+		ctx = query.WithMaxDepth(ctx, &depth)
 	}
 
 	var item = make(map[string]any)
